# xbuild-samples

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/xbuild_cli/: CMakeLists.txt  Sources.cmake
apps/xbuild_cli/src/: xbuild_cli.cpp
libs/: CMakeLists.txt
libs/xbuild_common_shared/: CMakeLists.txt  Sources.cmake
libs/xbuild_common_static/: CMakeLists.txt  Sources.cmake
libs/xbuild_common_static/include/: xbuild_common.h
libs/xbuild_common_static/src/: xbuild_common.cpp
libs/xbuild_kernel_static/: CMakeLists.txt  Sources.cmake
libs/xbuild_windrv/: CMakeLists.txt  Sources.cmake
libs/xbuild_windrv/src/: entry.c
